# trelix

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  e2e_test.sh  glama.json  pyproject.toml  trelix.spec
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build-binaries.yml  ci.yml  docker-publish.yml  github-app-ci.yml  helm-lint.yml  release.yml  trelix-review.yml  vscode-extension-ci.yml
docs/: BACKWARDS_COMPATIBILITY.md  CLI_REFERENCE.md  CONFIGURATION.md  FAQ.md  FEDERATION_GUIDE.md  GETTING_STARTED.md  GLOSSARY.md  INSTALLATION_GUIDE.md  LANGCHAIN_LLAMAINDEX_GUIDE.md  MCP_GUIDE.md  OBSERVABILITY.md  PROVIDERS.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md  WHY_TRELIX.md  architecture.md  v2.4.0-world-release-report.md
docs/discoverability/: AWESOME-LIST-SUBMISSIONS.md  ECOSYSTEM-ROADMAP.md
docs/integrations/: vscode-plugin.md
docs/superpowers/plans/: 2026-06-27-llm-client-factory.md  2026-06-27-query-embedding-cache.md  2026-06-28-file-type-weighting.md  2026-06-28-graph-api.md  2026-06-28-query-plan-cache.md  2026-06-28-tree-sitter-upgrade.md  2026-06-28-trelix-v2-upgrade.md  2026-06-29-knowledge-graph.md  2026-06-30-trelix-beast-mode.md  2026-07-01-trelix-v2.2-agentic-loop.md  2026-07-01-trelix-v2.2-dataflow-analysis.md  2026-07-01-trelix-v2.2-multi-granularity-indexing.md  2026-07-01-trelix-v2.2-sparse-dense-hybrid.md  2026-07-02-v2.3-plan-A-multi-query-wiring.md  2026-07-02-v2.3-plan-B-mcp-resources.md  2026-07-02-v2.3-plan-C-semantic-pr-review.md  2026-07-02-v2.3-plan-D-multi-repo-federation.md  2026-07-02-v2.3-plan-E-dimension-guard.md  2026-07-04-v2.4-plan-A-config-rename.md  2026-07-04-v2.4-plan-B-multi-query-observability.md  2026-07-04-v2.4-plan-C-federation-cache.md  2026-07-04-v2.4-plan-D-github-pr-review.md  2026-07-04-v2.4-plan-E-watch-all.md  2026-07-04-v2.4-plan-F-mcp-streaming.md  2026-07-06-trelix-v2-5-0.md  2026-07-08-phase1-watch-bridge-db-router.md  2026-07-08-phase2-cross-repo-diff-streaming.md  2026-07-08-phase3-vscode-github-app.md  2026-07-08-v2.6-plan-A-incremental-louvain.md  2026-07-08-v2.6-plan-B-short-query-lexical-fallback.md  2026-07-08-v2.6-plan-C-xtr-late-interaction.md  2026-07-08-v2.6-plan-D-grouse-eval-harness.md  v3-0-0-breaking-changes.md
docs/superpowers/specs/: 2026-06-27-llm-client-factory-design.md  2026-06-27-query-embedding-cache-design.md  2026-06-28-file-type-weighting-design.md  2026-06-28-graph-api-design.md  2026-06-28-query-plan-cache-design.md  2026-06-28-tree-sitter-upgrade-design.md
eval/: golden_synthesis_sample.jsonl
helm/trelix/: .helmignore  Chart.yaml  README.md  values.yaml
helm/trelix/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
infra/github-app/: README.md  manifest.yml  package-lock.json  package.json  tsconfig.json
infra/github-app/src/: auth.ts  config.ts  review-runner.ts  server.ts  webhook.ts
infra/github-app/tests/: auth.test.ts  review-runner.test.ts  webhook.test.ts
scripts/: build-binary.sh
src/trelix/: __init__.py
src/trelix/agent/: __init__.py  actions.py  history.py  loop.py  tools.py
src/trelix/analysis/: __init__.py  defuse.py  taint.py
src/trelix/api/: __init__.py  app.py
src/trelix/cli/: __init__.py  main.py
src/trelix/core/: config.py  models.py
src/trelix/embedder/: __init__.py  base.py  bge_code.py  cache.py  nomic_code.py  sparse.py
src/trelix/eval/: __init__.py  harness.py  ndcg.py  synthesis.py
src/trelix/federation/: __init__.py  registry.py  retriever.py
src/trelix/graph/: __init__.py  builder.py  code_graph.py  community.py  concepts.py  persistence.py  search.py  updater.py  visualizer.py
src/trelix/indexing/: chunker.py  file_summarizer.py  indexer.py  multi_granularity.py  multi_watcher.py  walker.py  watcher.py
src/trelix/llm/: __init__.py  client.py  factory.py
src/trelix/retrieval/: assembler.py  bm25.py  flare.py  fusion.py  graph.py  graph_rag.py  grep_search.py  otel_tracing.py  plan_cache.py  query_expansion.py  reranker.py  reranker_plaid.py  reranker_xtr.py  retriever.py  sparse_search.py  synthesizer.py  telemetry.py
src/trelix/review/: __init__.py  diff_embedder.py  diff_parser.py  github.py  reviewer.py
src/trelix/store/: db.py  dimension_guard.py  read_pool.py  sparse_store.py  vector.py  vector_lance.py  vector_qdrant.py
tests/eval/: __init__.py  harness.py  llm_judge.py  metrics.py
tests/eval/datasets/: __init__.py  (+1 more)
tests/integration/: test_cli.py  test_eval.py  test_graph_api_integration.py  test_indexer.py  test_llm_e2e.py  test_plan_cache_e2e.py  test_query_cache_e2e.py  test_recall.py  test_retriever.py
tests/perf/: test_query_latency.py
tests/unit/: conftest.py  test_agent_actions.py  test_agent_history.py  test_agent_loop.py  test_agent_session_db.py  test_api.py  test_api_graph.py  test_assembler.py  test_bm25.py  test_chunker.py  test_cli_migrate_vectors.py  test_cli_smoke.py  test_config.py  test_defuse.py  test_diff_embedder.py  test_diff_parser.py  test_dimension_guard.py  test_embedder.py  test_embedder_bge.py  test_embedder_cache.py  test_embedder_nomic.py  test_eval_harness.py  test_eval_judge.py  test_federation.py  test_file_summarizer.py  test_flare.py  test_fusion.py  test_github_pr.py  test_graph.py  test_graph_api.py  test_graph_builder.py  test_graph_code_graph.py  test_graph_community.py  test_graph_concepts.py  test_graph_pagerank.py  test_graph_persistence.py  test_graph_rag.py  test_graph_search.py  test_graph_updater.py  test_graph_visualizer.py  (+50 more)
workspace-vscode/: .vscodeignore  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
workspace-vscode/src/: extension.ts  mcp-client.ts  preview.ts  search-controller.ts
(+43 files in other folders)
