[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trelix"]

[project]
name = "trelix"
version = "0.1.0"
description = "Fast, reliable code indexing and retrieval — Tree-sitter parsing, hybrid search, call-graph expansion, LLM synthesis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Trelix Contributors" }]
requires-python = ">=3.11,<3.14"
keywords = [
    "code-search", "code-intelligence", "tree-sitter", "semantic-search",
    "code-indexing", "hybrid-search", "developer-tools", "llm", "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    # --- Parsing ---
    "tree-sitter>=0.21",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-kotlin>=1.1",
    "PyYAML>=6.0",
    # --- Storage ---
    "sqlite-vec>=0.1.6",
    # --- Embeddings ---
    "openai>=1.35.0",
    "tiktoken>=0.7.0",
    # --- Retrieval math ---
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    # --- File walking ---
    "pathspec>=0.12.1",
    # --- CLI ---
    "typer>=0.12.0",
    "rich>=13.7.0",
    # --- Config ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # --- Secure XML parsing (XXE/billion-laughs protection for .csproj) ---
    "defusedxml>=0.7.1",
    # --- Graph (PageRank) ---
    "networkx>=3.3.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0.0",  # LocalEmbedder + CrossEncoder reranker
]
rerank = [
    "cohere>=5.5.0",                  # Cohere reranker (best quality)
]
voyage = [
    "voyageai>=0.2.0",               # VoyageEmbedder (voyage-code-3, 56.26 CoIR)
]
qdrant = [
    "qdrant-client>=1.9.0",           # Qdrant HNSW vector backend (optional)
]
watch = [
    "watchdog>=4.0.0",               # Filesystem event monitoring for `trelix watch`
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pyinstaller>=6.0.0",
]
binary = [
    "pyinstaller>=6.0.0",
    "sentence-transformers>=3.0.0",   # local embedder bundled into the binary
]
all = [
    "trelix[local,rerank,voyage]",
]

[project.scripts]
trelix = "trelix.cli.main:app"

[project.urls]
Homepage = "https://github.com/trelix-dev/trelix"
Repository = "https://github.com/trelix-dev/trelix"
Documentation = "https://github.com/trelix-dev/trelix#readme"
Changelog = "https://github.com/trelix-dev/trelix/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/trelix-dev/trelix/issues"

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["src/trelix"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
