[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trelix"]

[project]
name = "trelix"
version = "2.3.0"
description = "Fast, reliable code indexing and retrieval — contextual hybrid search, adaptive planning, call-graph expansion, LLM synthesis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Trelix Contributors" }]
requires-python = ">=3.11,<3.13"
keywords = [
    "code-search", "code-intelligence", "tree-sitter", "semantic-search",
    "hybrid-search", "llm", "rag", "developer-tools", "code-indexing",
    "mcp", "model-context-protocol", "ast", "vector-search", "bm25",
    "call-graph", "embeddings", "openai", "langchain", "llama-index",
    "code-assistant", "code-retrieval", "static-analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    # --- Parsing ---
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10.2",
    "PyYAML>=6.0",
    # --- Storage ---
    "sqlite-vec>=0.1.6",
    # --- Embeddings ---
    "openai>=1.35.0",
    "tiktoken>=0.7.0",
    # --- Retrieval math ---
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    # --- File walking ---
    "pathspec>=0.12.1",
    # --- CLI ---
    "typer>=0.12.0",
    "rich>=13.7.0",
    # --- Config ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # --- Secure XML parsing (XXE/billion-laughs protection for .csproj) ---
    "defusedxml>=0.7.1",
    # --- Graph (PageRank) ---
    "networkx>=3.3.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0.0",  # LocalEmbedder + CrossEncoder reranker
]
rerank = [
    "cohere>=5.5.0",                  # Cohere reranker (best quality)
]
plaid = [
    "ragatouille>=0.0.8",             # PLAID ColBERT late-interaction reranker
]
voyage = [
    "voyageai>=0.2.0",               # VoyageEmbedder (voyage-code-3, 56.26 CoIR)
]
bge-code = [
    "FlagEmbedding>=1.3.0",           # BGE-Code-v1 and family
]
nomic-code = [
    "sentence-transformers>=3.0.0",  # already in [local], duplicated for clarity
]
sparse = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
]
qdrant = [
    "qdrant-client>=1.9.0",           # Qdrant HNSW vector backend (optional)
]
lance = [
    "lancedb>=0.6.0",                  # LanceDB ARM-native HNSW vector backend (optional)
    "pyarrow>=14.0",
]
watch = [
    "watchdog>=4.0.0",               # Filesystem event monitoring for `trelix watch`
]
serve = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.0",
    "mypy>=1.10.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pyinstaller>=6.0.0",
    "httpx2>=0.27",     # FastAPI TestClient (httpx2 replaces httpx for Starlette compatibility)
    "fastapi>=0.111.0", # REST API tests (tests/unit/test_api.py)
]
binary = [
    "pyinstaller>=6.0.0",
    "sentence-transformers>=3.0.0",   # local embedder bundled into the binary
]
taint = [
    "semgrep>=1.60.0",
]
anthropic = ["anthropic>=0.40.0"]
bedrock   = ["boto3>=1.35.0"]
vertex    = ["google-genai>=1.0.0"]
litellm   = ["litellm>=1.50.0"]
llm-all   = ["trelix[anthropic,bedrock,vertex,litellm]"]
graph-viz = ["pyvis>=0.3.2"]
knowledge-graph = ["networkx>=3.3.0", "pyvis>=0.3.2"]
all = [
    "trelix[local,rerank,voyage,qdrant,watch]",
]

[project.scripts]
trelix = "trelix.cli.main:app"

[project.urls]
Homepage = "https://github.com/sairam0424/trelix"
Repository = "https://github.com/sairam0424/trelix"
Documentation = "https://github.com/sairam0424/trelix#readme"
Changelog = "https://github.com/sairam0424/trelix/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/sairam0424/trelix/issues"
"MCP Server" = "https://pypi.org/project/trelix-mcp/"
"LangChain" = "https://pypi.org/project/trelix-langchain/"
"LlamaIndex" = "https://pypi.org/project/trelix-llama-index/"

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
pythonpath = ["src", "."]
filterwarnings = [
    "ignore::FutureWarning:tree_sitter",
]

[tool.coverage.run]
source = ["src/trelix"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 75
